--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Reset styles */
 body, h1, h2, p, ul {
     margin: 0;
     padding: 0;
@@ -47,6 +46,33 @@ h2 {
     color: #444;
     font-size: 1.5rem;
 }
+
+.about-content {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+.photos {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.small-photo {
+    width: 200px;
+    height: auto;
+    margin-right: 150px; /* Adjust the margin as needed */
+}
+.medium-photo {
+    width: 400px;
+    height: auto;
+    margin-right: 20px; /* Adjust the margin as needed */
+}
+
+.text-content {
+    flex: 1;
+}
+
 
 a {
     color: #007bff; /* Use the same primary color for links */
